# ORRO

./: .gitignore  CONTRIBUTING.md  DEVIATIONS.md  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: README.md  architecture.md  bootstrap.md  compatibility-matrix.md  e2e-runner.md  e2e-smoke-contract.md  engine-contract.md  engine-lock-update-process.md  evidence-model.md  install.md  orro-command-migration.md  orro-strategic-review-spec.md  os-support.md  packaging-decision.md  pinned-engine-fallback.md  product-reality-check.md  repository-strategy.md  thin-wrapper-plan.md  thin-wrapper.md  workflow-reference.md  workstyle-doctrine.md  wrapper-distribution.md
docs/assurance/: long-automation-maturity.md  strategic-review-corpus.v0.json  threat-model.md
docs/integrations/: integration-surface-policy.md
docs/superpowers/plans/: 2026-07-06-orro-assurance-harness-foundation.md  2026-07-19-orro-check-companion-mode.md
docs/superpowers/specs/: 2026-07-19-orro-check-companion-mode-design.md  2026-07-22-orro-code-health-axis-design.md  2026-07-22-orro-legibility-v1-design.md  2026-07-23-orro-task-worktree-design.md
engine-lock/: orro-e2e-engine-lock.json  orro-engine-lock.example.json
examples/: code-change.md  docs-change.md  full-flow.md  non-developer-safe-flow.md  release-readiness.md  review-only.md  verification-only.md
packaging/: command-migration-plan.v0.json  marketplace-manifest.draft.json  pinned-engine-fallback-policy.v0.json  plugin-manifest.draft.json  wrapper-package-plan.v0.json
packaging/name-claim/: .gitignore  README.md
packaging/name-claim/npm/: README.md  index.js  package.json
packaging/name-claim/pypi/: pyproject.toml
packaging/name-claim/pypi/src/orro/: __init__.py  __main__.py
release/: compatibility-matrix.v0.json  orro-release-manifest.v0.json
scripts/: bootstrap_orro.py  check_compatibility_matrix.py  check_no_bidi_controls.py  check_orro_assurance_contract_fixtures.py  check_orro_command_migration.py  check_orro_command_migration_dry_run.py  check_orro_fallback_policy.py  check_orro_language_boundaries.py  check_orro_packaging_decision.py  check_orro_release_manifest.py  check_orro_release_state.py  check_orro_repo_contract.py  check_orro_version_coherence.py  check_orro_wrapper.py  check_orro_wrapper_distribution.py  check_orro_wrapper_install.py  orro_build_backend.py  orro_e2e_smoke.py  update_orro_engine_lock.py
src/orro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/orro_wrapper/: __init__.py  cli.py
tests/e2e/: README.md
tests/fixtures/language-boundaries/: cases.v0.json
