[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orro-product-wrapper"
version = "0.1.0rc1"
description = "ORRO product/distribution wrapper skeleton for pinned Depone and witnessd engines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
orro = "orro_wrapper.cli:main"
orro-wrapper = "orro_wrapper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
