[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orro"
version = "0.1.0"
description = "ORRO product command with in-process delegation to the witnessd runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["witnessd>=2.3.2"]

[project.scripts]
orro = "orro_wrapper.cli:main"
orro-wrapper = "orro_wrapper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
