[metadata]
name = orro
version = 0.1.0
description = ORRO product command with in-process delegation to the witnessd runtime.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    witnessd>=2.3.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    orro = orro_wrapper.cli:main
    orro-wrapper = orro_wrapper.cli:main
