[metadata]
name = orro
version = 0.2.17
description = Published ORRO product/distribution wrapper for pinned Depone and witnessd engines.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    witnessd>=2.4.0,<3.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    orro = orro_wrapper.cli:main
    orro-wrapper = orro_wrapper.cli:main
