[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "orro"
version = "0.0.2"
description = "ORRO — the Observed Run & Review Orchestrator. Thin orro command over the Moonweave witnessd runtime and Depone verifier."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Moonweave Systems", email = "choimoonyoung3631@gmail.com" }]
keywords = ["orro", "moonweave", "evidence", "verification", "coding-agents", "provenance"]
# witnessd is a runtime requirement resolved at import time, not a hard install
# dependency: the engine is currently distributed via GitHub releases, not PyPI,
# so a PyPI dependency pin would make `pip install orro` unresolvable. The orro
# command guides the user to install witnessd if it is missing.
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Moonweave-Systems/ORRO"
Repository = "https://github.com/Moonweave-Systems/ORRO"
"witnessd (engine)" = "https://github.com/Moonweave-Systems/witnessd"
"Depone (verifier)" = "https://github.com/Moonweave-Systems/Depone"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
